developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/OJ_PM__Process_Thread__c.object-meta.xml
<CustomObject>
    <label>Process Thread</label>
    <nameField>
        <label>Process Thread Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>