developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Business_Process_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Business_Process_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>OJ_PM__Business_Process__c</referenceTo>
    <relationshipLabel>Process Threads</relationshipLabel>
    <relationshipName>Process_Threads</relationshipName>
    <type>Lookup</type>
</CustomField>