developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Completed_Steps__c</fullName>
    <description>The database ids of the steps that have been completed, separated by commas</description>
    <label>Completed Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>