developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Enter_Loop__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Enter_Loop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enter Loop</label>
    <type>Checkbox</type>
</CustomField>