developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__External_ID__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__External_ID__c</fullName>
    <description>A reference that can be used to retrieve this record using a key other than the Salesforce id
Suggested values are an auto-number field or a combination of last name and timestamp</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>