developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Loop_Name__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Loop_Name__c</fullName>
    <label>Loop Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>