developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Master_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Master_Object_Id__c</fullName>
    <description>The Salesforce id of the sObject that is the focus of the Business Process. This could be a Lead, Contact or Custom Object</description>
    <label>Master Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>