developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Page_Execution_Path__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Page_Execution_Path__c</fullName>
    <label>Page Execution Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>