developerProject/force-app/main/default/objects/OJ_PM__Process_Thread__c/fields/OJ_PM__Parent_Process_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Parent_Process_Thread_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Process Thread</label>
    <referenceTo>OJ_PM__Process_Thread__c</referenceTo>
    <relationshipLabel>Child Process Thread</relationshipLabel>
    <relationshipName>Parent_Process_Thread</relationshipName>
    <type>Lookup</type>
</CustomField>